# worldmonitor-databricks

./: .gitignore  README.md  app.py  app.yaml  databricks.yml  pyproject.toml  requirements.txt
docs/: API.md  BACKEND_DATA_ARCHITECTURE_ANALYSIS.md  DATA_DICTIONARY.md  FRONTEND_COMPONENT_ANALYSIS.md  HYBRID_STORAGE_ARCHITECTURE.md  TESTING.md  USER_GUIDE.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: ControlPanel.tsx  DataPanel.tsx  EventsPanel.tsx  IntelPanel.tsx  MapView.tsx  SettingsPanel.tsx  Sidebar.tsx  StatsPanel.tsx
frontend/src/stores/: appStore.ts
notebooks/: archive_conflicts.py  archive_earthquakes.py  archive_fires.py  archive_market_quotes.py  archive_vessel_positions.py  generate_vessel_history.py  sync_vessel_history_to_lakebase.py
resources/: archival_jobs.yml  ingestion_jobs.yml  setup_job.yml  worldmonitor_app.yml
server/: __init__.py  config.py  db.py  delta_tables.py  llm.py  spark_jobs.py
server/routes/: __init__.py  climate.py  conflict.py  cyber.py  economic.py  infrastructure.py  intelligence.py  maritime.py  market.py  military.py  news.py  seismology.py  wildfire.py
server/scripts/: __init__.py  generate_vessel_history.py
setup/: create_tables.py
